{
    "name": "PhoneControls",
    "maps": [
        {
            "name": "SystemActions",
            "id": "b26779a1-6635-442b-986f-ab3eacd2f6d5",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "a806fb65-7797-4574-b750-ae40ab876d1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FingerContact",
                    "type": "Button",
                    "id": "0c49dc4c-f1a1-453c-97da-2b6dc196e287",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FingerPosition",
                    "type": "PassThrough",
                    "id": "46c8ceee-fa3a-44cf-9ca4-356d6c840ace",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8967dc46-de5d-47a1-a6b9-af238e39ffce",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "388d6ae8-7bbe-406e-9d5b-0ed17609f14a",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "FingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6773eb9-b549-4297-a565-ac1e3c01c99d",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}